--- a/examples/standalone/Makefile
+++ b/examples/standalone/Makefile
@@ -13,6 +13,7 @@ extra-$(CONFIG_MPC5xxx)            += interrupt
 extra-$(CONFIG_8xx)                += test_burst timer
 extra-$(CONFIG_MPC8260)            += mem_to_mem_idma2intr
 extra-$(CONFIG_PPC)                += sched
+extra-$(CONFIG_LS102XA)            += gic
 
 #
 # Some versions of make do not handle trailing white spaces properly;
